--- a/popup2.html
+++ b/popup2.html
@@ -24,12 +24,12 @@
       <p>
       <div class="list-group" id="list">
         <a href="#" class="list-group-item active"> <!-- this is your active search -->
-          A
+          Cras justo odio
         </a>
-        <a href="popup2.html" class="list-group-item">B</a>
-        <a href="#" class="list-group-item">C</a>
-        <a href="#" class="list-group-item">D</a>
-        <a href="#" class="list-group-item">E</a>
+        <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
+        <a href="#" class="list-group-item">Morbi leo risus</a>
+        <a href="#" class="list-group-item">Porta ac consectetur ac</a>
+        <a href="#" class="list-group-item">Vestibulum at eros</a>
       </div>
       </p>
 
