--- a/popup2.html
+++ b/popup2.html
@@ -13,26 +13,31 @@
     <title>Tab Manager</title>
     <body>
       <p>Begin a new search. </p>
-      <form id="newSearch">
-        <p>Topic:</p>
-        <p><input type="text" id="query"></p>
-        <p><input type="submit" value="Submit" id="submit"></p>
-      </form>
-
+      <p>Topic:</p>
+      <div class="row">
+        <div class="col-sm-6">
+        <form id="newSearch">
+          <div class="input-group">
+            <input type="text" class="form-control" id="query">
+            <span class="input-group-btn">
+              <button id="newSearch" class="btn btn-default" type="submit" >Go!</button>
+            </span>
+          </div><!-- /input-group -->
+        </form>
+        </div><!-- /.col-lg-6 -->
+      </div>
       <br>
       Current searches:
       <p>
       <div class="list-group" id="list">
-        <a href="#" class="list-group-item active"> <!-- this is your active search -->
-          Cras justo odio
-        </a>
-        <a href="#" class="list-group-item">Dapibus ac facilisis in</a>
-        <a href="#" class="list-group-item">Morbi leo risus</a>
-        <a href="#" class="list-group-item">Porta ac consectetur ac</a>
-        <a href="#" class="list-group-item">Vestibulum at eros</a>
+        <!-- this is your active search -->
+        <a href="#" class="list-group-item">A</a>
+        <a href="popup2.html" name="search2" class="list-group-item active">B</a>
+        <a href="#" class="list-group-item">C</a>
+        <a href="#" class="list-group-item">D</a>
+        <a href="#" class="list-group-item">E</a>
       </div>
       </p>
-
     </body>
     <style>
       body {
@@ -43,6 +48,9 @@
         padding-right: 10px;
         padding-bottom: 0px;
         padding-left: 10px;
+        background-color: #FFFFFF;
+        min-width: 250px;
+        max-width: 100%;
       }
       .list-group {
         color: green;
