--- a/visual.html
+++ b/visual.html
@@ -1,6 +1,14 @@
 <!doctype html>
 <html>
-  <head>
+<head>
+    <!-- JQuery 
+    <link rel="stylesheet" href="jquery-ui-1.11.2.custom/jquery-ui.min.css">
+    <script src="jquery-ui-1.11.2.custom/external/jquery/jquery.js"></script>
+    <script src="jquery-ui-1.11.2.custom/jquery-ui.min.js"></script>
+    -->
+
+    <script type="text/javascript" src="jquery.js"></script>
+
     <!-- Bootstrap! -->
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
@@ -8,47 +16,69 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-  </head>
 
-    <title>Visualizer</title>
-    <body>
-      <h1>Your Research Visualized</h1>
-      <br/>
-      <h3>New Title:</h3>
-      <form id="newTitle" method="POST" action="newTitle.asp">
-        <div class="input-group">
-          <input type="text" name="title">
-          &nbsp;&nbsp;
-          <button id="newTitle" class="btn btn-default" type="submit" >Save</button>
-        </div><!-- /input-group -->
-      </form>
-      <br/>
-      High priority:
-      <p><div class="list-group" id="high-priority"></div></p>
-      <hr>
-      Medium priority:
-      <p><div class="list-group" id="medium-priority"></div></p>
-      <hr>
-      Low priority:
-      <p><div class="list-group" id="low-priority"></div></p>
-      <hr>
-    </body>
+    <script type="text/javascript" src="visual.js"></script>
+    <script type="text/javascript" src="db.js"></script>
+
+    <title>Forager</title>
+
+
     <style>
       body {
         /*overflow-x: hidden; */
         line-height: 100%;
         font-size = 12px;
-        padding-top: 10px;
-        padding-right: 10px;
-        padding-bottom: 0px;
-        padding-left: 10px;
+        padding-top: 1.5%;
+        padding-bottom: 5%;
         background-color: #FFFFFF;
         min-width: 250px;
         max-width: 100%;
+        padding-left: 20%;
+        padding-right: 20%;
       }
-    </style>
-    
-    <script src="db.js"></script>
-    <script src="visual.js"></script>
+      [id^="tabone"] {
+        background-color: #77DD77;
+      }
+      [id^="tabone"]:hover {
+        background-color: white;
+      }
+      [id^="tabtwo"] {
+        background-color: #FDFD96;
+      }
+      [id^="tabone"]:hover {
+        background-color: white;
+      }
+      [id^="tabthree"] {
+        background-color: #DEA5A4;
+      }
+      [id^="tabone"]:hover {
+        background-color: white;
+      }
+      a {
+        color: black;
+      }
+      .close {
+        color: black;
+        font-size: 18px;
+      }
+    </style> 
 
+</head>
+
+<body>
+    <h2 id="currentTask">My current task: </h2>
+    <br/>
+    <h4>Potential (For Later):</h4>
+    <p><div class="list-group" id="high-priority"></div></p>
+    <hr>
+    <h4>Archive:</h4>
+    <p><div class="list-group" id="medium-priority"></div></p>
+    <hr>
+    <h4>Irrelevant:</h4>
+    <p><div class="list-group" id="low-priority"></div></p>
+    <hr>
+
+    &#8984I to save as potential. &#8984K to archive. &#8984U to close. &#8984J to start a new task.
+
+</body>
 </html>
