realtime changes, made smooth

--- a/visual.html
+++ b/visual.html
@@ -22,7 +22,6 @@
 
     <title>Forager</title>
 
-
     <style>
       body {
         /*overflow-x: hidden; */
@@ -66,7 +65,7 @@
 </head>
 
 <body>
-    <h2 id="currentTask">My current task: </h2>
+    <h2 id="currentTask">Forager</h2>
     <br/>
     <h4>Potential (For Later):</h4>
     <p><div class="list-group" id="high-priority"></div></p>
