--- a/visual.html
+++ b/visual.html
@@ -34,7 +34,7 @@
         padding-left: 20%;
         padding-right: 20%;
         background-image: url('background.jpg');
-        background-size: 50%;
+        background-size: 100%;
         text-decoration: none;
       }
       [id^="tabone"] {
@@ -77,7 +77,7 @@
     <p><div class="list-group" id="low-priority"></div></p>
     <hr>
 
-    &#8984I to save as potential. &#8984J to archive. &#8984K to close. &#8984B to start a new task.
+    &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984B to start a new task.
 
 </body>
 </html>
