--- a/visual.html
+++ b/visual.html
@@ -33,7 +33,7 @@
         max-width: 100%;
         padding-left: 20%;
         padding-right: 20%;
-        background-image: url('background.jpg');
+        background-image: url('Media/background.jpg');
         background-size: 100%;
         text-decoration: none;
       }
