--- a/popup.html
+++ b/popup.html
@@ -19,7 +19,7 @@
           <div class="input-group">
             <input type="text" class="form-control" id="query">
             <span class="input-group-btn">
-              <button id="newSearch" class="btn btn-default" type="submit" >Go!</button>
+              <button class="btn btn-default" type="submit" >Go!</button>
             </span>
           </div><!-- /input-group -->
         </form>
@@ -46,6 +46,7 @@
     </style>
 
     <script src="db.js"></script>
+    <script src="taskdb.js"></script>
     <script src="popup.js"></script>
 
 </html>
