--- a/visual.html
+++ b/visual.html
@@ -19,6 +19,7 @@
 
     <script type="text/javascript" src="visual.js"></script>
     <script type="text/javascript" src="db.js"></script>
+    <script src="taskdb.js"></script>
 
     <title>Forager</title>
 
