change to previous tasks

--- a/popup.html
+++ b/popup.html
@@ -43,6 +43,16 @@
         min-width: 250px;
         max-width: 100%;
       }
+      a {
+        color: black;
+      }
+      .close {
+        color: black;
+        font-size: 18px; 
+      }
+      hr {
+        color: black;
+      }
     </style>
 
     <script src="db.js"></script>
