--- a/popup.html
+++ b/popup.html
@@ -12,7 +12,7 @@
 
     <title>Tab Manager</title>
     <body>
-     <p>Enter a new topic:</p>
+     <p>Enter a new task:</p>
       <div class="row">
         <div class="col-sm-6">
         <form id="newSearch" method="POST" action="#">
