--- a/visual.html
+++ b/visual.html
@@ -82,6 +82,7 @@
     <hr>
 
     &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984B to start a new task.
+    <a href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc"> Need help?</a>
 
 </body>
 </html>
