--- a/visual.html
+++ b/visual.html
@@ -39,19 +39,19 @@
         text-decoration: none;
       }
       [id^="tabone"] {
-        background-color: #4D7094;
+        background-color: #BAD8EB;
       }
       [id^="tabone"]:hover {
         background-color: white;
       }
       [id^="tabtwo"] {
-        background-color: #6685A3;
+        background-color: #A8D1EB;
       }
       [id^="tabone"]:hover {
         background-color: white;
       }
       [id^="tabthree"] {
-        background-color: #8099B2;
+        background-color: #85B7D8;
       }
       [id^="tabone"]:hover {
         background-color: white;
