--- a/assets/html/visual.html
+++ b/assets/html/visual.html
@@ -17,9 +17,11 @@
     <!-- Latest compiled and minified JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
 
-    <script type="text/javascript" src="/assets/js/visual.js"></script>
-    <script type="text/javascript" src="/assets/js/db.js"></script>
+    <script src="/assets/js/visual.js"></script>
+    <script src="/assets/js/db.js"></script>
     <script src="/assets/js/taskdb.js"></script>
+    <script src="/assets/js/shortcut.js"></script>
+
 
     <title>Forager</title>
 
