--- a/assets/html/visual.html
+++ b/assets/html/visual.html
@@ -1,90 +1,116 @@
 <!doctype html>
-<html ng-csp ng-app="listApp">
+<html ng-csp>
 <head>
-    <!-- JQuery -->
-    <script src="/assets/js/jquery-2.1.3.min.js"></script>
-    <!-- Bootstrap -->
-    <script src="/assets/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-    <!-- Angular -->
-    <script src="/assets/js/angular.min.js"></script>
-    <link rel="stylesheet" href="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.css">
-    <script type="text/javascript" src="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.js"></script>
-
-    <script src="/assets/js/visual.js"></script>
-    <script src="/assets/js/db.js"></script>
-    <script src="/assets/js/taskdb.js"></script>
-    <script src="/assets/js/shortcut.js"></script>
-    <link rel="stylesheet" href="/assets/css/visual.css">
-
-    <title>Forager</title>
+  <title>Forager</title>
 </head>
 
-<body ng-controller="MainCtrl" id="test">
+<body ng-app="listApp" ng-controller="MainCtrl" id="test">
   <h2 id="currentTask">Forager</h2>
-  <div>
     <!-- Column 1 -->
     <div class="col-md-5 col-xs-5 col-md-offset-2 col-xs-offset-2">
 
-      <h4>Potential (For Later)</h4>
-      <script type="text/ng-template" id="items_renderer.html">
-        <div ui-tree-handle>
-          <a class="pull-left btn btn-success btn-xs" data-nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
-          <a class="pull-left btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span class="glyphicon glyphicon-open"></span></a>
-          {{item.title}}
-          <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="remove(this)"><span class="glyphicon glyphicon-remove"></span></a>
-          <!--<a class="pull-right btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)" style="margin-right: 8px;"><span class="glyphicon glyphicon-plus"></span></a>  -->
-        </div>
-        <ol ui-tree-nodes="options" ng-model="item.items" ng-class="{hidden: collapsed}">
-          <li ng-repeat="item in item.items" ui-tree-node ng-include="'items_renderer.html'">
-          </li>
-        </ol>
-      </script>
-      
-      <div ui-tree="options" >
-      <ol ui-tree-nodes="" ng-model="list">
-        <li ng-repeat="item in list" ui-tree-node ng-include="'items_renderer.html'">
-          <div ui-tree-handle>
-            {{item.title}}
-          </div>
-          <ol ui-tree-nodes="" ng-model="item.items">
-            <li ng-repeat="subItem in item.items" ui-tree-node>
-              <div ui-tree-handle>
-                {{subItem.title}}
-              </div>
-            </li>
-          </ol>
+    <script type="text/ng-template" id="nodes_renderer.html">
+      <div ui-tree-handle>
+        <a class="pull-left btn btn-success btn-xs" data-nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
+        <a class="pull-left btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span class="glyphicon glyphicon-open"></span></a>
+        {{item.title}}
+        <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="rm(this)"><span class="glyphicon glyphicon-remove"></span></a>
+      </div>
+      <ol ui-tree-nodes="options" ng-model="item.items" ng-class="{hidden: collapsed}">
+        <li ng-repeat="item in item.items" ui-tree-node ng-include="'nodes_renderer.html'">
         </li>
       </ol>
-      </div> 
+    </script>
 
-            <h4>Archive</h4>
-      <p><div class="list-group" id="medium-priority"></div></p>
-      <h4>Irrelevant</h4>
-      <p><div class="list-group" id="low-priority"></div></p> 
+    <h4>Potential (For Later)</h4>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree1" id="tree1-root">
+      <li ng-repeat="item in tree1" ui-tree-node ng-include="'nodes_renderer.html'">
+        <div ui-tree-handle>
+          <!-- {{item.title}} -->
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
+    </div> 
+
+    <h4>Archive</h4>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree2" id="tree2-root">
+      <li ng-repeat="item in tree2" ui-tree-node ng-include="'nodes_renderer.html'">
+        <div ui-tree-handle>
+          <!-- {{item.title}} -->
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
     </div>
 
-
-    <!-- Column 2 -->
-    <div class="col-md-3 col-xs-3">
-      <h4 id="tasks">Tasks</h4>
-      <p><div class="l1ist-group" id="tasklist"></div></p>
-    </div> 
-    <!-- Hardcode gutter -->
-    <div class="col-md-2 col-xs-2"><br></div>
-  
-    <!-- Second row -->
-    <div class="col-md-8 col-xs-8 col-md-offset-2 col-xs-offset-2"><br>
-      <hr>
-      &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984Period to start a new task.<br>
-      <a id="export"></a><br>
-      <a id="help" href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc">Need help? Click here!</a>
-
-      <br>
-
-
+    <h4>Irrelevant</h4>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree3" id="tree3-root">
+      <li ng-repeat="item in tree3" ui-tree-node ng-include="'nodes_renderer.html'">
+        <div ui-tree-handle>
+          <!-- {{item.title}} -->
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
+    </div>
   </div>
+
+  <!-- Column 2 -->
+  <div class="col-md-3 col-xs-3">
+    <h4 id="tasks">Tasks</h4>
+    <p><div class="l1ist-group" id="tasklist"></div></p>
+  </div> 
+  <!-- Hardcode gutter -->
+  <div class="col-md-2 col-xs-2"><br></div>
+
+  <!-- Second row -->
+  <div class="col-md-8 col-xs-8 col-md-offset-2 col-xs-offset-2"><br>
+    <hr>
+    &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984Period to start a new task.<br>
+    <a id="export"></a><br>
+    <a id="help" href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc">Need help? Click here!</a>
+
+    <br>
+
+  <!-- JQuery -->
+  <script src="/assets/js/jquery-2.1.3.min.js"></script>
+  <!-- Bootstrap -->
+  <script src="/assets/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+  <!-- Angular -->
+  <script src="/assets/js/angular.min.js"></script>
+  <link rel="stylesheet" href="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.css">
+  <script type="text/javascript" src="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.js"></script>
+
+  <script src="/assets/js/visual.js"></script>
+  <script src="/assets/js/db.js"></script>
+  <script src="/assets/js/taskdb.js"></script>
+  <script src="/assets/js/shortcut.js"></script>
+  <link rel="stylesheet" href="/assets/css/visual.css">
+
 </body>
 
 </html>
