--- a/assets/html/visual2.html
+++ b/assets/html/visual2.html
@@ -1,95 +1,119 @@
 <!doctype html>
-<html ng-app>
+<html ng-csp>
 <head>
-    <script type="text/javascript" src="/assets/js/jquery.js"></script>
- 
-    <!-- Bootstrap! -->
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
-    <!-- Optional theme -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
-    <!-- Latest compiled and minified JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-
-    <!-- Angular -->
-    <script src="/assets/js/angular.min.js"></script>
-    
-
-    <script src="/assets/js/angular-drag-and-drop-lists.js"></script>
-
-    <!-- Angular UI Tree -->
-    <link rel="stylesheet" href="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.css">
-    <script type="text/javascript" src="/assets/angular-ui-tree-master/dist/angular-ui-tree.js"></script>
-
-    <script type="text/javascript" src="/assets/js/visual2.js"></script>
-    <script type="text/javascript" src="/assets/js/db.js"></script>
-    <script src="/assets/js/taskdb.js"></script>
-    <script src="/assets/js/shortcut.js"></script>
-    
-
-    <title>Forager</title>
-
-    <style>
-      body {
-        line-height: 100%;
-        font-size = 10%;
-        padding-top: 1.5%;
-        padding-bottom: 5%;
-        background-color: #FFFFFF;
-        min-width: 250px;
-        max-width: 100%;
-        padding-left: 20%;
-        padding-right: 20%;
-        background-image: url('/assets/img/background.jpg');
-        background-size: 100%;
-        text-decoration: none;
-      }
-      [id^="tabone"] {
-        background-color: #7f7fbf;
-      }
-      [id^="tabone"]:hover {
-        background-color: white;
-      }
-      [id^="tabtwo"] {
-        background-color: #9999cc;
-      }
-      [id^="tabone"]:hover {
-        background-color: white;
-      }
-      [id^="tabthree"] {
-        background-color: #b2b2d8;
-      }
-      [id^="tabone"]:hover {
-        background-color: white;
-      }
-      a {
-        color: black;
-      }
-      .close {
-        color: black;
-        font-size: 18px; 
-      }
-      hr {
-        color: black;
-      }
-    </style> 
-
+  <title>Forager</title>
 </head>
 
-<body>
-    <h2 id="currentTask">Forager</h2>
-    <br/>
-    <h4>Here will be the new visualization!</h4>
-    <p><div class="list-group" id="high-priority"></div></p>
+<body ng-app="listApp" ng-controller="MainCtrl" id="test">
+  <h2 id="currentTask">Forager</h2>
+    <!-- Column 1 -->
+    <div class="col-md-5 col-xs-5 col-md-offset-2 col-xs-offset-2">
+
+    <script type="text/ng-template" id="nodes_renderer.html">
+      <div ui-tree-handle>
+        <a class="pull-left btn btn-success btn-xs" data-nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
+        <a class="pull-left btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span class="glyphicon glyphicon-open"></span></a>
+        {{item.title}}
+        <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="rm(this)" id="rm"><span class="glyphicon glyphicon-remove"></span></a>
+      </div>
+      <ol ui-tree-nodes="options" ng-model="item.items" ng-class="{hidden: collapsed}">
+        <li ng-repeat="item in item.items" ui-tree-node ng-include="'nodes_renderer.html'">
+        </li>
+      </ol>
+    </script>
+
+    <h4>Potential (For Later)</h4>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree1" id="tree1-root">
+      <li ng-repeat="item in tree1" ui-tree-node ng-include="'nodes_renderer.html'">
+        <div ui-tree-handle id="text">
+          <div id="text">{{item.title}}</div>
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
+    </div> 
+
     <h4>Archive</h4>
-    <p><div class="list-group" id="medium-priority"></div></p>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree2" id="tree2-root">
+      <li ng-repeat="item in tree2" ui-tree-node ng-include="'nodes_renderer.html'" >
+        <div ui-tree-handle id="text">
+          <!-- {{item.title}} -->
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
+    </div>
+
     <h4>Irrelevant</h4>
-    <p><div class="list-group" id="low-priority"></div></p>
+    <div ui-tree="options">
+    <ol ui-tree-nodes="" ng-model="tree3" id="tree3-root">
+      <li ng-repeat="item in tree3" ui-tree-node ng-include="'nodes_renderer.html'">
+        <div ui-tree-handle id="text">
+          <!-- {{item.title}} -->
+        </div>
+        <ol ui-tree-nodes="" ng-model="item.items">
+          <li ng-repeat="subItem in item.items" ui-tree-node>
+            <div ui-tree-handle>
+              <!-- {{subItem.title}} -->
+            </div>
+          </li>
+        </ol>
+      </li>
+    </ol>
+    </div>
+  </div>
+
+  <!-- Column 2 -->
+  <div class="col-md-3 col-xs-3">
+    <h4 id="tasks">Tasks</h4>
+    <p><div class="l1ist-group" id="tasklist"></div></p>
+  </div> 
+  <!-- Hardcode gutter -->
+  <div class="col-md-2 col-xs-2"><br></div>
+
+  <!-- Second row -->
+  <div class="col-md-8 col-xs-8 col-md-offset-2 col-xs-offset-2" id="instructions"><br>
     <hr>
+    &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984Period to start a new task.<br>
+    <a id="export"></a><br>
+    <a id="help" href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc">Need help? Click here!</a>
 
-    &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984B to start a new task.
-    <a href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc"> Need help?</a>
+    <br>
 
-  
+  <!-- Google Fonts -->
+  <link href='http://fonts.googleapis.com/css?family=Droid+Serif' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+  <!-- JQuery -->
+  <script src="/assets/js/jquery-2.1.3.min.js"></script>
+  <!-- Bootstrap -->
+  <script src="/assets/bootstrap-3.3.2-dist/js/bootstrap.min.js"></script>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.0/css/bootstrap-theme.min.css">
+  <!-- Angular -->
+  <script src="/assets/js/angular.min.js"></script>
+  <link rel="stylesheet" href="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.css">
+  <script type="text/javascript" src="/assets/angular-ui-tree-master/dist/angular-ui-tree.min.js"></script>
+
+  <script src="/assets/js/visual2.js"></script>
+  <script src="/assets/js/db.js"></script>
+  <script src="/assets/js/taskdb.js"></script>
+  <script src="/assets/js/shortcut.js"></script>
+  <link rel="stylesheet" href="/assets/css/visual.css">
+
 </body>
+
 </html>
