--- a/assets/html/visual.html
+++ b/assets/html/visual.html
@@ -9,8 +9,8 @@
 
     <script type="text/ng-template" id="nodes_renderer.html">
       <div ui-tree-handle>
-        <a class="pull-left btn btn-success btn-xs" data-nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a>
-        <a class="pull-left btn btn-primary btn-xs" data-nodrag ng-click="newSubItem(this)"><span class="glyphicon glyphicon-open"></span></a>
+        <!-- <a class="pull-left btn btn-success btn-xs" data-nodrag ng-click="toggle(this)"><span class="glyphicon" ng-class="{'glyphicon-chevron-right': collapsed, 'glyphicon-chevron-down': !collapsed}"></span></a> -->
+        <a class="btn btn-default btn-xs" data-nodrag ng-click="newSubItem(this)"><span class="glyphicon glyphicon-open"></span></a>
         {{item.title}}
         <a class="pull-right btn btn-danger btn-xs" data-nodrag ng-click="rm(this)" id="rm"><span class="glyphicon glyphicon-remove"></span></a>
       </div>
@@ -20,11 +20,13 @@
       </ol>
     </script>
 
+    <div class="row row-bottom-margin">
+
      <!-- Column 1 -->
     <div class="col-md-4 col-xs-4 col-md-offset-1 col-xs-offset-1">
 
     <h4>Potential (For Later)</h4>
-    <div ui-tree="options">
+    <div ui-tree="options" id="col1">
     <ol ui-tree-nodes="" ng-model="tree1" id="tree1-root">
       <li ng-repeat="item in tree1" ui-tree-node ng-include="'nodes_renderer.html'">
         <div ui-tree-handle id="text">
@@ -41,13 +43,13 @@
     </ol>
     </div>
 
-    </div> 
+    </div>
 
     <!-- Column 2 -->
     <div class="col-md-4 col-xs-4">
 
     <h4>Archive</h4>
-    <div ui-tree="options">
+    <div ui-tree="options" id="col2">
     <ol ui-tree-nodes="" ng-model="tree2" id="tree2-root">
       <li ng-repeat="item in tree2" ui-tree-node ng-include="'nodes_renderer.html'" >
         <div ui-tree-handle id="text">
@@ -65,7 +67,7 @@
     </div>
 
     <h4>Irrelevant</h4>
-    <div ui-tree="options">
+    <div ui-tree="options" id="col3">
     <ol ui-tree-nodes="" ng-model="tree3" id="tree3-root">
       <li ng-repeat="item in tree3" ui-tree-node ng-include="'nodes_renderer.html'">
         <div ui-tree-handle id="text">
@@ -81,32 +83,44 @@
       </li>
     </ol>
     </div>
-  </div>
 
-  </div> 
+  </div>
 
   <!-- Column 3 -->
   <div class="col-md-2 col-xs-2">
     <h4 id="tasks">Tasks</h4>
-    <p><div class="l1ist-group" id="tasklist"></div></p>
+    <p><div class="list-group" id="tasklist"></div></p>
   </div> 
 
   <!-- Hardcode gutter -->
-  <div class="col-md-1 col-xs-1"><br></div> 
+  <div class="col-md-1 col-xs-1"></div> 
+
+  </div>
 
   <!-- Second row -->
-  <div class="col-md-10 col-xs-10 col-md-offset-1 col-xs-offset-1" id="instructions"><br>
+
+  <div class="row row-bottom-margin">
+
+  <div class="col-md-10 col-xs-10 col-md-offset-1 col-xs-offset-1" id="instructions">
     <hr>
     &#8984I to save as potential. &#8984K to archive. &#8984J to close. &#8984Period to start a new task. Press the right arrow key to switch visualizations.<br>
-    <a id="export"></a><br>
+    <a id="export"></a>
     <a id="help" href="https://www.evernote.com/l/ASrbR-kwtCxPU4w9T0q8oftsFPqoyZ4Jlyc">Need help? Click here!</a>
+  </div>
 
-    <br>
+  </div>
 
   <style>
   #currentTask {
-      padding-left: 9.5% !important;
-      padding-right: 9.5% !important;
+    padding-left: 9% !important;
+    padding-right: 9% !important;
+  }
+  body {
+    overflow: hidden; 
+  }
+  .row-bottom-margin { 
+    margin-bottom:0px;
+    margin-top:0px;
   }
   </style>
 
